--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^4.0.0-rc.6",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "pinia": "^2.1.4",
     "save": "^2.9.0",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vxe-table": "^4.5.5",
+    "xe-utils": "^3.5.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
