--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^3.3.4",
     "vue-i18n": "^9.3.0",
     "vue-router": "^4.2.4",
+    "vue3-print-nb": "^0.1.4",
     "vxe-table": "^4.5.5",
     "xe-utils": "^3.5.12"
   },
